# rucio-root-plugin

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: cmake.yml
etc/plugins/TFile/: P070_TRucioFile.C
inc/: LinkDef.h  TRucioFile.h  TRucioResolver.h  TRucioUrl.h
src/: TRucioFile.cxx  TRucioResolver.cxx  TRucioUrl.cxx
tests/: test_rucio_json_stream.cxx  test_rucio_url.cxx
